--- a/index.html
+++ b/index.html
@@ -23,6 +23,29 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.12/js/intlTelInput.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/libphonenumber-js/1.9.19/libphonenumber-js.min.js"></script>
 
+		<script type="module">
+			// Import the functions you need from the SDKs you need
+			import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js'
+			import { getAnalytics } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-analytics.js'
+			// TODO: Add SDKs for Firebase products that you want to use
+			// https://firebase.google.com/docs/web/setup#available-libraries
+
+			// Your web app's Firebase configuration
+			// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+			const firebaseConfig = {
+				apiKey: 'AIzaSyAsXnmIrKpPVtCjS9ioqXZljbiOSVIIdDg',
+				authDomain: 'chatbot-8469e.firebaseapp.com',
+				projectId: 'chatbot-8469e',
+				storageBucket: 'chatbot-8469e.appspot.com',
+				messagingSenderId: '406647122950',
+				appId: '1:406647122950:web:8365d728f6f7ea5b8f6787',
+				measurementId: 'G-7SXD8JYMN4',
+			}
+
+			// Initialize Firebase
+			const app = initializeApp(firebaseConfig)
+			const analytics = getAnalytics(app)
+		</script>
 		<title>Maxeon</title>
 	</head>
 	<body>
