--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 		<title>Maxeon</title>
 	</head>
 	<body>
+<!-- <div id="loader" class="loader"></div> -->
+
 		<script src="https://media.twiliocdn.com/sdk/js/chat/v6.0/twilio-chat.min.js"></script>
 		<script src="assets/js/main.js"></script>
 	</body>
